@@ -57,6 +57,8 @@ Version 7.2 05-June-07
     bit of new cunning has reduced the workspace needed for groups with
     alternatives. The 1000-alternative test pattern now uses 12 bytes of
     workspace instead of running out of the 4096 that are available.
+    
+10. Inserted some missing (unsigned int) casts to get rid of compiler warnings.
 
 
 Version 7.1 24-Apr-07
